written code for footer

--- a/first.html
+++ b/first.html
@@ -102,6 +102,30 @@
         </a>
      </div>
 </div>
+<footer class="panel-footer">
+    <div class="container">
+    <div class="row">
+       
+            <section id="hours" class="col-sm-4">
+            <span>Hours: </span> <br>
+            monday to saturday :10am to 6pm <br>
+            sunday closed    
+            <hr class="visible-xs">
+        </section>
+       
+<section  id="address" class="col-sm-4"  >
+  <span>Address:</span><br>
+  #12, IISC Mathikere Bangalore,560012
+  <hr class="visible-xs">
+</section>
+<section id="testimonials" class="col-sm-4">
+  <p> "hotel is good and well cleanded"</p> 
+<p>  "i wish to visit again and again "</p>
+</section>
+    </div>
+    <div class="text-center"> &copy;copy right by hotel indira indian special 2017</div>
+</div>
+</footer>
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
